// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionButton > should be a block button 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-primary action-btn-gray action-btn-sm action-btn-block"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should be a disabled button 1`] = `
<button
  aria-disabled="true"
  class="action-btn action-btn-ghost action-btn-gray action-btn-sm disabled"
  data-id="sds-action-button"
  disabled=""
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should be a lg button 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-primary action-btn-blue action-btn-lg"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should be a link 1`] = `
<a
  aria-disabled="false"
  class="action-btn action-btn-ghost action-btn-gray action-btn-sm"
  data-id="sds-action-button"
  href="https://www.example.domain.com/"
>
  
  <!-- @slot ActionButton content. -->
  
  
  
</a>
`;

exports[`ActionButton > should be a md button 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-primary action-btn-blue"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should be a submit button 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-primary action-btn-blue action-btn-sm"
  data-id="sds-action-button"
  type="submit"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should be a xs button 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-primary action-btn-blue action-btn-xs"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should be an active button 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-secondary action-btn-red action-btn-sm active"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should be an external link 1`] = `
<a
  aria-disabled="false"
  class="action-btn action-btn-ghost action-btn-gray action-btn-sm"
  data-id="sds-action-button"
  href="https://www.example.domain.com/"
  rel="noopener noreferrer"
  target="_blank"
>
  
  <!-- @slot ActionButton content. -->
  
  
  
</a>
`;

exports[`ActionButton > should match its default snapshot 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-ghost action-btn-gray action-btn-sm"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Button
  
  
</button>
`;

exports[`ActionButton > should match its kind ghost, variant red snapshot 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-ghost action-btn-red action-btn-sm"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should match its kind primary, variant blue snapshot 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-primary action-btn-blue action-btn-sm"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;

exports[`ActionButton > should match its kind secondary, variant gray snapshot 1`] = `
<button
  aria-disabled="false"
  class="action-btn action-btn-secondary action-btn-gray action-btn-sm"
  data-id="sds-action-button"
  type="button"
>
  
  <!-- @slot ActionButton content. -->
  
  Action Button
  
  
</button>
`;
